--- a/src/app/modules/accept-request/accept-request.component.scss
+++ b/src/app/modules/accept-request/accept-request.component.scss
@@ -61,24 +61,23 @@
 
 .phead {
     color: #000;
+    color: #000;
     font-family: League Spartan;
-    font-size: 36px;
+    font-size: 29px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
+    margin-top: 31px;
     line-height: 36px;
-    /* 100% */
-    margin-top: 18px;
 }
 
 .posted {
     color: #535353;
     font-family: League Spartan;
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: 36px;
-    /* 150% */
-    margin-top: 22px;
+    margin-top: 28px;
 }
 
 .hrmain {
