--- a/src/app/modules/authors/authors.component.html
+++ b/src/app/modules/authors/authors.component.html
@@ -71,7 +71,7 @@
     </div>
   </div>
   <div class="container " *ngFor="let JobPost of Posts">
-    <div class="borderboxv" *ngIf=" JobPost.userId == UserData[0].userId" >
+    <div class="borderboxv" *ngIf=" JobPost.userId == UserData[0].id" >
       <div class="row" >
         <br>
         <div class="col-10">
