--- a/src/app/modules/view-freelancers/view-freelancers.component.html
+++ b/src/app/modules/view-freelancers/view-freelancers.component.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="container" *ngFor="let Post of JobPosts; ">
-        <div *ngIf=" Post.id === UserData[0].id">
+        <div *ngIf=" Post.userId === UserData[0].id">
         <div [routerLink]="['/authors/accept-a-request/pick-now', Post.jobId]" >
         <div class="row" >
             <div class="col-8 phead" >
