--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -70,7 +70,7 @@
         <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
     </div>
         <div class="kkpname">
-            <p class="kkprname">{{User[0].firstName}} {{User[0].lastName}}</p>
+            <p class="kkprname">{{User[0].firstName}}</p>
             <p class="kkprname1">Author</p>
             <p class="kkprbtn1" routerLink="/setting/wallet"><span class="material-symbols-outlined">
               account_balance_wallet
