--- a/src/app/modules/authprofile/authprofile.component.html
+++ b/src/app/modules/authprofile/authprofile.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-4 text-center">
-                <img class="pimg"  *ngIf="User[0].profileUrl"  src={{imageUrl}}{{User[0].profileUrl}}>
+                <img class="pimg"  *ngIf="User[0].profileUrl"  src={{User[0].profileUrl}}>
                 <img class="pimg"  *ngIf="!User[0].profileUrl"  src="../assets/Frame 82.png">
                 <p class="prohead">Profile Image</p>
                 
