--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -5,7 +5,7 @@
     <div class="col-12">
       <div class="appliedborder">
         <div *ngFor="let JobPost of  Applies;">
-          <div class="row" style="margin-top: 17px;" *ngIf="JobPost.status === 'offer'">
+          <div class="row" style="margin-top: 17px;" *ngIf="JobPost.status === 'offers'">
             <div class="col-8">
               <p class="jobtitle">{{JobPost.jobTitle}}</p>
               <p class="jobDesc">{{JobPost.jobDescription | slice:0:220 }}</p>
