All flow checking

--- a/src/app/modules/applied-jobs/applied-jobs.component.scss
+++ b/src/app/modules/applied-jobs/applied-jobs.component.scss
@@ -1,9 +1,9 @@
 .applyhead1 {
     color: #000;
     font-family: "League Spartan";
-    font-size: 42px;
+    font-size: 36px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: normal;
 }
 
@@ -74,10 +74,10 @@
 
 .kkjbtxtline1 {
     margin-top: 25px;
-    font-size: 28px;
+    font-size: 26px;
     line-height: 36px;
-    font-weight: 800;
-    font-family: 'League Spartan', sans-serif;
+    font-weight: 500;
+    font-family: "League Spartan", sans-serif;
 }
 
 .kkjbtxtline2 {
