--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -11,7 +11,7 @@
               Jobs
             </button>
             <ul class="dropdown-menu listd" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item ddis">Post a New Job</a></li><br>
+              <li><a class="dropdown-item ddis" routerLink="/post-a-job">Post a New Job</a></li><br>
               <li><a class="dropdown-item ddis" routerLink="/authors/accept-a-request">Job Postings</a></li><br>
               <li><a class="dropdown-item ddis" routerLink="/authors/on-going-jobs">Ongoing Job</a></li><br>
               <li><a class="dropdown-item ddis">Completed Job</a></li><br>
