--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -896,25 +896,20 @@ padding-left: 10px;
 .c2{
     font-family: League Spartan;
     font-size: 25px;
-    margin: initial;
-    margin-left: 24px;
     font-style: normal;
     line-height: 16px;
-    margin-top: 8px;
     text-align: center;
+    padding-bottom: 9px;
 }
 
 
 .e1{
     margin-left: 455px;
     margin-top: 22px;
-
-
 }
 
 .pad1{
-    padding: 13px 36px 47px 36px;
-}
+    padding: 13px 36px 10px 36px;}
 
 
 .modal-fot {
