--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -1,5 +1,5 @@
-<!-- <div id="google-btn"></div>  
-  {{name}}<br><img src="{{userProfile}}" alt=""><br>{{Email}} -->
+ <div id="google-btn"></div>  
+  {{name}}<br><img src="{{userProfile}}" alt=""><br>{{Email}}
 <div *ngIf="action === 'all'">
     <div *ngIf="GoNext === 'button1'">
         <div class="container mt-3">
