--- a/src/app/modules/accept-request/accept-request.component.html
+++ b/src/app/modules/accept-request/accept-request.component.html
@@ -9,7 +9,7 @@
             <hr class="hrmain">
             <div class="row">
                 <button class="tabn" (click)="onButtonClick('button1')"
-                    [ngClass]="{'selected': selectedButton === 'button1'}">All Proposals({{Applies.length}})</button>
+                    [ngClass]="{'selected': selectedButton === 'button1'}">All Proposals()</button>
                 <button class="tabn" (click)="onButtonClick('button2')"
                     [ngClass]="{'selected': selectedButton === 'button2'}">New Proposals</button>
                 <button class="tabn" (click)="onButtonClick('button3')"
@@ -18,24 +18,24 @@
                     [ngClass]="{'selected': selectedButton === 'button4'}">Messaged</button>
             </div>
         </div>
-
-        <div class="container " style="margin-top: 50px;" *ngIf="Applies && Applies.length > 0">
-            <div class="row deta" *ngFor="let Apply of Applies">
+        
+        <div class="container " style="margin-top: 50px;" >
+          <div class="row deta" >
                 <div class="col-1">
                     <div class="elli"></div>
                 </div>
                 <div class="col-5">
-                    <p class="fname">{{Apply.userEmail}}</p>
-                    <p class="fsub">{{Apply.skillSet}}</p>
+                    <p class="fname">{{Applies.userEmail}} </p>
+                    <p class="fsub">{{Applies.skillSet}}</p>
                     <!-- <div class="fsub">4 years expierience <span style="margin-left: 26px;" class="fsub">12 jobs
                             completed</span></div> -->
                 </div>
                 <div class="col-2"></div>
                 <div class="col-3">
-                    <p class="bid">Bidding rate : <span class="rate">${{Apply.biddingRate}}/ hour</span></p>
+                    <p class="bid">Bidding rate : <span class="rate">${{Applies.biddingRate}}/ hour</span></p>
                     <button class="msg">Message</button><button  class="hire" data-bs-toggle="modal"
-                        data-bs-target="#hireModal" (click)="ApplyModal(Apply)">Hire</button>
-                    <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Apply)">View
+                        data-bs-target="#hireModal" (click)="ApplyModal(Applies)">Hire</button>
+                    <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Applies)">View
                         Cover Letter <img src="../assets/Vector 26.png" alt="Welcome Pubkin"> </p>
                 </div>
                 <div class="col-1">
@@ -45,6 +45,8 @@
         </div>
     </div>
 </div>
+
+
 <!--Cover Letter Modal-->
 <div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog dia12">
@@ -132,18 +134,13 @@
                         </div>
                             <div class="payamount">Payable Amount<span>₹{{ calculateFees().payableAmount }}</span></div>
 
-                            <!-- <form #updateForm="ngForm" (ngSubmit)="onSubmit(updateForm)"> -->
-                            <!-- <input type="hidden" id="ApplyId" name="ApplyId" [value]="selectedhire.ApplyId"
-                                    [(ngModel)]="service.formData.ApplyId">
-                                <input type="hidden" id="isProgressJobs" name="isProgressJobs" #isProgressJobs="ngModel"
-                                    [(ngModel)]="service.formData.isProgressJobs"> -->
-                            <!-- <div *ngFor="let user of users">(click)="AcceptRequest();showthedetails();"
-                                    <div class="kklisuser" *ngIf="user.firstName == selectedhire.FreelancerName"> -->
-                            <button class="cpay"  data-bs-toggle="modal" data-bs-target="#saveModal">Confirm & Pay</button>
-                            <!-- </div>
-                                </div> -->
+                                    <form #updateForm="ngForm" (ngSubmit)="onSubmitStatus(updateForm)">
+                                      <input type="hidden" id="id" name="id" [(ngModel)]="Applies.id">
+                                      <input type="text" id="status" name="status" [(ngModel)]="Applies.status" >                                    
+                            <button class="cpay"  data-bs-toggle="modal" data-bs-target="#saveModal" (click)="ChangeStatus();">Confirm & Pay</button>
+                          </form>
                             <p class="disclaimer">*This payment will be add on your wallet</p>
-                            <!-- </form> -->
+                           
                         </div>
                     </div>
                 </div>
@@ -298,3 +295,4 @@
       </div>
     </div>
   </div>
+
