--- a/src/app/modules/applied-jobs/applied-jobs.component.html
+++ b/src/app/modules/applied-jobs/applied-jobs.component.html
@@ -6,6 +6,9 @@
     <p class="applyhead1">Applied Jobs</p>
     <div class="row kkjbbrow">
       <div class="col-12 kkjbbx">
+        <div *ngIf="!anyJobInProgress()" class="kkjbtxtline1">
+          No applied jobs are available for you!
+        </div>
         <!-- <div class="container" *ngFor="let JobPost of filteredJobPosts | jobsearch : searchTerm "  (click)="showJobDetails(JobPost.JobUniqueId)"> -->
         <div class="container " *ngFor="let Apply of  Applies;">
           <div class="row" *ngIf="Apply.status === 'applied'">
