--- a/src/app/modules/comments/comments.component.html
+++ b/src/app/modules/comments/comments.component.html
@@ -11,7 +11,7 @@
               <p class="kkjbtxtb1">{{jobPost.jobUniqueId}} - {{jobPost.jobTitle}} <br>{{jobPost.description | slice:0:43
                 }}...
               </p>
-              <p class="kkjbtxtb11">Posted at {{ getPostStatus(jobPost.createDate)}}</p>
+              <p class="kkjbtxtb11">Posted at {{ jobPost.createDate}}</p>
               <hr class="kkline1">
             </div>
             <div class="kkjbdiv2">
@@ -57,11 +57,11 @@
 
           </div>
           <div class="col-4 kkjbdetlis1 text-center">
-            <span *ngIf="User[0].role == 'author'" class="examplerework">
+            <span *ngIf="User[0].role == 'freelancer'" class="examplerework">
               <button class="btn kkjbdtbtn2" (click)="submitworks();">Submit Work</button>
               <button class="btn kkjbdtbtn1" data-bs-toggle="modal" data-bs-target="#exampleModal">Comments</button>
             </span>
-            <span *ngIf="User[0].role == 'freelancer'" class="examplerework">
+            <span *ngIf="User[0].role == 'author'" class="examplerework">
               <button class="btn kkjbdtbtn2" (click)="showViewedWork()">Rework Needed</button>
               <button class="btn kkjbdtbtn1" data-bs-toggle="modal" data-bs-target="#exampleModal">Comments</button>
             </span>
@@ -81,8 +81,8 @@
             <div class="col-8">
               <div class="kkcmdbx2">
                 <ul *ngFor="let comment of comments">
-                  <li class="kkcmdbox1" *ngIf="jobPost.jobId == comment.jobId">
-                    <p class="kkcmdtx1">{{comment.createdBy}}</p>
+                  <li class="kkcmdbox1" *ngIf="jobPost.id == comment.jobId">
+                    <p class="kkcmdtx1">{{comment.createdBy}} :</p>
                     <p class=" kkcmdbox kkcmdtx">{{comment.comments}}</p>
                   </li>
                 </ul>
@@ -93,7 +93,7 @@
                 <p class="kkcmdtx2">Files:</p>
                 <ul class="kkcmdbx4" *ngFor="let comment of comments; let i=index">
 
-                  <li class=" kkcmdtx3" *ngIf="jobPost.jobId == comment.jobId">
+                  <li class=" kkcmdtx3" *ngIf="jobPost.id == comment.jobId">
                     <div class="container img-fluid mt-3">
                       <a [href]="imageUrl + comment.fileUrl" target="_blank" download class="no-underline">
                         <p class="imageShows">{{i+1}}. {{comment.fileUrl.split('_')[1]}}</p>
@@ -125,9 +125,9 @@
             <p class="hed">Work Files</p>
             <hr class="codu1">
             <div class="d-flex justify-content-center position-relative">
-              <div *ngIf="selectedFiles.length > 0" class="scrollfiles">
+              <!-- <div *ngIf="selectedFiles.length > 0" class="scrollfiles">
                 <div *ngFor="let fileName of selectedFiles; let i=index;">
-                  <div class="foldericon" *ngIf="hideFolderIcon">
+                  <div class="foldericon" >
                     <ul>
                       <li>
                         <div class="  w-100">
@@ -150,20 +150,43 @@
                     d="M82.0026 79.758H12.0026C8.95345 79.7955 6.0137 78.6231 3.82706 76.4977C1.64042 74.3723 0.385091 71.467 0.335938 68.418V11.7647C0.385091 8.71571 1.64042 5.81043 3.82706 3.68502C6.0137 1.55961 8.95345 0.387265 12.0026 0.424698H33.4693C34.1586 0.429256 34.8383 0.586459 35.4596 0.885008C36.0809 1.18356 36.6284 1.61604 37.0626 2.15136L49.1959 16.9914H81.8626C83.3841 16.9542 84.8979 17.2187 86.3167 17.7697C87.7354 18.3206 89.031 19.1471 90.1287 20.2014C91.2264 21.2557 92.1044 22.5169 92.7121 23.9123C93.3197 25.3077 93.6451 26.8096 93.6693 28.3314V68.418C93.6201 71.467 92.3648 74.3723 90.1781 76.4977C87.9915 78.6231 85.0518 79.7955 82.0026 79.758Z"
                     fill="#E8A9FF" />
                 </svg>
+              </div> -->
+              <div *ngIf="selectedFiles.length > 0" class="scrollfiles">
+                <div *ngFor="let fileName of selectedFiles; let i=index;">
+                  <div class="foldericon" >
+                    <ul>
+                      <li>
+                        <div class="w-100">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" viewBox="0 0 35 30" fill="none">
+                            <path d="M30.625 29.9997H4.375C3.23157 30.0138 2.12916 29.5705 1.30917 28.7668C0.489182 27.9631 0.0184324 26.8645 0 25.7115V4.28847C0.0184324 3.13552 0.489182 2.03691 1.30917 1.2332C2.12916 0.429486 3.23157 -0.0138263 4.375 0.000328855H12.425C12.6835 0.00205255 12.9384 0.0614977 13.1714 0.174392C13.4044 0.287286 13.6097 0.450825 13.7725 0.653256L18.3225 6.2649H30.5725C31.1431 6.25084 31.7108 6.35087 32.2428 6.55921C32.7748 6.76755 33.2607 7.08007 33.6723 7.47874C34.0839 7.87741 34.4132 8.35433 34.641 8.88199C34.8689 9.40965 34.9909 9.97759 35 10.553V25.7115C34.9816 26.8645 34.5108 27.9631 33.6908 28.7668C32.8708 29.5705 31.7684 30.0138 30.625 29.9997Z" fill="#E8A9FF"/>
+                          </svg>
+                          <span class="dropname3">{{ i + 1 }}. {{ fileName }}</span>
+                          <img src="../assets/con _x letter_.svg" class="closeicon" alt="">
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
               </div>
+              <div class="foldericon" *ngIf="hideFolderIcon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="94" height="80" viewBox="0 0 94 80" fill="none">
+                  <path d="M82.0026 79.758H12.0026C8.95345 79.7955 6.0137 78.6231 3.82706 76.4977C1.64042 74.3723 0.385091 71.467 0.335938 68.418V11.7647C0.385091 8.71571 1.64042 5.81043 3.82706 3.68502C6.0137 1.55961 8.95345 0.387265 12.0026 0.424698H33.4693C34.1586 0.429256 34.8383 0.586459 35.4596 0.885008C36.0809 1.18356 36.6284 1.61604 37.0626 2.15136L49.1959 16.9914H81.8626C83.3841 16.9542 84.8979 17.2187 86.3167 17.7697C87.7354 18.3206 89.031 19.1471 90.1287 20.2014C91.2264 21.2557 92.1044 22.5169 92.7121 23.9123C93.3197 25.3077 93.6451 26.8096 93.6693 28.3314V68.418C93.6201 71.467 92.3648 74.3723 90.1781 76.4977C87.9915 78.6231 85.0518 79.7955 82.0026 79.758Z" fill="#E8A9FF"/>
+                </svg>
+              </div>
+              
             </div>
-            <input type="text" id="id" name="id" [(ngModel)]="workfileData.id">
-            <input type="text" id="FileUrl" name="FileUrl" [(ngModel)]="workfileData.FileUrl" ngModel #ngModel=""
+            <input type="hidden" id="id" name="id" [(ngModel)]="workfileData.id">
+            <input type="hidden" id="FileUrl" name="FileUrl" [(ngModel)]="workfileData.FileUrl" ngModel #ngModel=""
               required>
-            <input type="text" id="fileName" name="fileName" [(ngModel)]="workfileData.FileName">
-            <input type="text" id="JobId" name="JobId" [(ngModel)]="workfileData.JobId">
-            <input type="text" id="UserId" name="UserId" [(ngModel)]="workfileData.UserId">
+            <input type="hidden" id="fileName" name="fileName" [(ngModel)]="workfileData.FileName">
+            <input type="hidden" id="JobId" name="JobId" [(ngModel)]="workfileData.JobId">
+            <input type="hidden" id="UserId" name="UserId" [(ngModel)]="workfileData.UserId">
             <p class="d-flex justify-content-center dropname">Drop Files your files here and Submit</p>
             <div class="d-flex justify-content-center pb-5">
               <input type="file" class="d-none" id="file" #fileInput name="file" (change)="onFileSelected1($event)"
                 required>
-              <div class="uploadbtn" class="uploadbtn" (click)="openFileUploadDialog();">
-                <img src="../assets/upload share_.png" alt="upload"> Upload
+              <div class="uploadbtn" class="uploadbtn" (click)="openFileUploadDialog();hideFolder()">
+                <img src="../assets/upload share_.png" alt="upload"  > Upload
               </div>
             </div>
           </div>
@@ -201,18 +224,19 @@
   </div>
 </div>
 
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <button type="button" class="btn-close e1" data-bs-dismiss="modal" aria-label="Close"></button>
-      <form novalidate autocomplete="off" (ngSubmit)="submitForm()">
+      <form novalidate #commentForm="ngForm" autocomplete="off" (ngSubmit)="submitForm(commentForm)">
         <div class="pad1">
-          <div class="modal-hed">
-            <input type="hidden" id="dateCreated" name="dateCreated" [(ngModel)]="commentData.dateCreated">
-            <input type="hidden" id="id" name="id" [(ngModel)]="commentData.id">
-            <input type="hidden" id="createdBy" name="createdBy" [(ngModel)]="commentData.createdBy">
-            <input type="hidden" id="jobId" name="jobId" [(ngModel)]="commentData.jobId">
-            <p class="c2" id="exampleModalLabel"><b>Please add the reason of rework</b></p>
+          <div class="">
+            <input type="text" id="dateCreated" name="dateCreated" [(ngModel)]="commentData.dateCreated">
+            <input type="text" id="id" name="id" [(ngModel)]="commentData.id">
+            <input type="text" id="createdBy" name="createdBy" [(ngModel)]="commentData.createdBy">
+            <input type="text" id="jobId" name="jobId" [(ngModel)]="commentData.jobId">
+            <p class="c2" id="exampleModalLabel">Please add your comments</p>
           </div>
           <textarea (click)="showDetails();" class="form-control h1" aria-label="With textarea" name="comments"
             [(ngModel)]="commentData.Comments" required></textarea>
