--- a/src/app/modules/freelancernav/freelancernav.component.html
+++ b/src/app/modules/freelancernav/freelancernav.component.html
@@ -35,10 +35,12 @@
               <!-- <p class="opth">Explore the world of publishing</p> -->
               <p class="opth"></p>
             </a></li>
-          <li><a class="dropdown-item ddis" routerLink="/freelancers/progress">Accepted Jobs<br>
+            <li><a class="dropdown-item ddis" routerLink="/freelancers/job-offers">pending Offers<br>
               <!-- <p class="opth">We help to start your journey in publishing</p> -->
               <p class="opth"></p>
             </a></li>
+            <li><a class="dropdown-item ddis" routerLink="/freelancers/ongoing-jobs">Accepted Jobs<br>
+              <p class="opth"></p>  </a></li>
             <li><a class="dropdown-item ddis" routerLink="/freelancers/completed">Completed Jobs<br>
               <!-- <p class="opth">We help to start your journey in publishing</p> -->
               <p class="opth"></p>
@@ -46,7 +48,7 @@
           <!-- <li><a class="dropdown-item ddis">Need Help?<br>
               <p class="opth">We will guide you through setting up profile</p>
             </a></li> -->
-        </ul>
+      </ul>
       </div>
     </div>
     <div class="col-1">
