--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -4,8 +4,11 @@
   <div class="row ">
     <div class="col-12">
       <div class="appliedborder">
+        <div *ngIf="!anyJobInProgress()" class="jobtitle">
+          No offers are available for you!
+        </div>
         <div *ngFor="let JobPost of  Applies;">
-          <div class="row" style="margin-top: 17px;" *ngIf="JobPost.status === 'offer'">
+          <div class="row" style="margin-top: 17px;" *ngIf="JobPost.status === 'offers'">
             <div class="col-8">
               <p class="jobtitle">{{JobPost.jobTitle}}</p>
               <p class="jobDesc">{{JobPost.jobDescription | slice:0:220 }}</p>
@@ -16,7 +19,7 @@
             </div>
             <div class="row">
               <div class="col-8">
-                <p class="aboutjob">Rate: ₹<span style="color: black;font-weight: 700;">{{JobPost.rate}}</span></p>
+                <p class="aboutjob">Rate: ₹<span style="color: black;font-weight: 500;">{{JobPost.rate}}</span></p>
               </div>
               <div class="col-4">
                 <p class="postedname">Request by<span style="color: #A426D1;"> {{JobPost.postBy}}</span></p>
