--- a/src/app/modules/progress-jobs/progress-jobs.component.scss
+++ b/src/app/modules/progress-jobs/progress-jobs.component.scss
@@ -1,80 +1,82 @@
 .applyhead { 
     color: #000;
     font-family: "League Spartan";
-    font-size: 40px;
+    font-size: 36px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
-    margin-top: 59px;
+    margin-top: 35px;
 }
 .appliedborder {  
     display: flex;
-width: 100%;
-padding: 28px 43px 30px 37px;
-height: auto;
-flex-direction: column;
-justify-content: flex-end;
-border-radius: 16px;
-margin-top: 35px;
-border: 2px solid #C1C1C1;
+    width: 100%;
+    padding: 28px 43px 30px 37px;
+    height: auto;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-radius: 16px;
+    margin-top: 15px;
+    border: 2px solid #C1C1C1;
 
 }
 
 .jobtitle { 
     color: #000;
-font-family: "League Spartan";
-font-size: 36px;
-font-style: normal;
-font-weight: 600;
-line-height: 36px; /* 100% */
+    font-family: "League Spartan";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
 
 }
 
 .jobDesc  { 
     color: #535353;
-font-family: "League Spartan";
-font-size: 24px;
-font-style: normal;
-font-weight: 400;
-line-height: 36px; /* 150% */
+    font-family: "League Spartan";
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+
 }  
 
 .aboutjob { 
     color: #535353;
-font-family: "League Spartan";
-font-size: 24px;
-font-style: normal;
-margin-top: 45px;
-font-weight: 500;
-line-height: 36px; /* 150% */
+    font-family: "League Spartan";
+    font-size: 24px;
+    font-style: normal;
+    margin-top: 16px;
+    font-weight: 500;
+    line-height: 36px;
+
 }
 
 .viewJobbtn { 
     display: inline-flex;
-padding: 14px 32px;
-justify-content: center;
-border: 0px;
-align-items: center;
-gap: 10px;
-color: #FFF;
-font-family: "League Spartan";
-float: right;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-border-radius: 4px;
-background: #A426D1;
+    padding: 14px 32px;
+    justify-content: center;
+    border: 0px;
+    align-items: center;
+    gap: 10px;
+    color: #FFF;
+    font-family: "League Spartan";
+    float: right;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-radius: 4px;
+    background: #A426D1;
 }
 
 .postedname {  
     color: #535353;
     font-family: "League Spartan";
-    font-size: 24px;
+    font-size: 21px;
     font-style: normal;
     float: right;
     font-weight: 500;
-    margin-top: 43px;
+    margin-top: 18px;
     line-height: 36px;
 }
 
@@ -91,20 +93,21 @@ background: #A426D1;
 
 .rejectbtn { 
     color: #000;
-font-family: "League Spartan";
-font-size: 20px;
-font-style: normal;
-margin-left: 62px;
-font-weight: 600;
-line-height: normal;
-display: inline-flex;
-padding: 12px 32px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-border-radius: 4px;
-border: 2px solid #FF7E7E;
-background: #F9F9F9;
+    font-family: "League Spartan";
+    font-size: 20px;
+    font-style: normal;
+    margin-left: 62px;
+    font-weight: 500;
+    line-height: normal;
+    display: inline-flex;
+    padding: 12px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 4px;
+    border: 2px solid #FF7E7E;
+    background: #F9F9F9;
+
 }
 
 .rejecttxt { 
