--- a/src/app/modules/view-freelancers/view-freelancers.component.html
+++ b/src/app/modules/view-freelancers/view-freelancers.component.html
@@ -1,5 +1,4 @@
- <app-authornav></app-authornav>
-
+<app-author-nav></app-author-nav>
     <div class="container">
         <div class="row">
             <div class="col-6">
@@ -21,9 +20,9 @@
         <hr class="hrmain">
     </div>
 
-    <div class="container" *ngFor="let Post of JobPosts; ">
+    <div class="container"  *ngFor="let Post of Posts; ">
         <div *ngIf=" Post.userId === UserData[0].id">
-        <div [routerLink]="['/authors/accept-a-request/pick-now', Post.jobId]" >
+        <div [routerLink]="['/authors/accept-a-request/pick-now', Post.id]" >
         <div class="row" >
             <div class="col-8 phead" >
                {{Post.jobTitle}}
