--- a/src/app/modules/authprofile/authprofile.component.scss
+++ b/src/app/modules/authprofile/authprofile.component.scss
@@ -29,6 +29,8 @@
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
+    -webkit-box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .com { 
