--- a/src/app/modules/freeprofile/freeprofile.component.scss
+++ b/src/app/modules/freeprofile/freeprofile.component.scss
@@ -23,15 +23,15 @@
     gap: 10px;
     border: 0px solid #A426D1;
     border-radius: 7px;
-background: #A426D1;
-color: #FFF;
-font-family: League Spartan;
-font-size: 18px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
--webkit-box-shadow: 2px 4px 0px 1px rgba(0,0,0,.16), 0 9px 10px 0 rgba(0,0,0,.12);
-box-shadow: 2px 4px 0px 1px rgba(0,0,0,.16), 0 9px 10px 0 rgba(0,0,0,.12);
+    background: #A426D1;
+    color: #FFF;
+    font-family: League Spartan;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    -webkit-box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .com { 
