--- a/src/app/modules/payment/payment.component.html
+++ b/src/app/modules/payment/payment.component.html
@@ -1,3 +1,21 @@
 <div class="d-flex justify-content-center">
 <button class="paynow">Pay Now</button>
 </div>
+
+<!-- <div id="g_id_onload"
+     data-client_id="202921354570-cgrtnggio9l9amugpir95rb33uf8dehm.apps.googleusercontent.com"
+     data-context="signin"
+     data-ux_mode="popup"
+     data-login_uri="http://localhost:4200/"
+     data-auto_prompt="false">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="pill"
+     data-theme="filled_blue"
+     data-text="signin_with"
+     data-size="medium"
+     data-logo_alignment="left">
+</div> -->
+
