--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -135,7 +135,7 @@ margin-top: 22px;
   border: 1px solid #CBCBCB;
   margin-left: 10px;
   margin-top: 6px;
-  box-shadow: 0px 1px 8px #e7e1e1;
+  // box-shadow: 0px 1px 8px #e7e1e1;
 }
 .kkin2{
   display: flex;
@@ -150,7 +150,7 @@ margin-top: 22px;
   border: 1px solid #CBCBCB;
   margin-left: -1px;
   margin-top: 6px;
-  box-shadow: 0px 1px 8px #e7e1e1;
+  // box-shadow: 0px 1px 8px #e7e1e1;
 }
 .kkin12{
   display: flex;
@@ -180,7 +180,7 @@ margin-top: 22px;
   font-weight: 300;
   height: 50px;
   padding: 9px 14px 10px 16px;
-  box-shadow: 0px 1px 8px #e7e1e1;
+  // box-shadow: 0px 1px 8px #e7e1e1;
 }
 
 .kkedubt{
@@ -224,7 +224,7 @@ margin-left: 10px;
   line-height: 36px;
 }
 select{
-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.2);
+// box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.2);
 cursor: pointer;
 }
 
@@ -264,7 +264,7 @@ cursor: pointer;
   font-style: normal;
   font-weight: 300;
   line-height: 36px;
-  box-shadow: 0px 1px 8px #e7e1e1;
+  // box-shadow: 0px 1px 8px #e7e1e1;
 }
 
 .skip1 { 
@@ -523,7 +523,7 @@ font-style: normal;
 font-weight: 300;
 line-height: normal;
 padding: 12px;
-box-shadow: 0px 1px 8px #e7e1e1;
+// box-shadow: 0px 1px 8px #e7e1e1;
 }
 
 .imghead {
