--- a/src/app/modules/signup/signup.component.scss
+++ b/src/app/modules/signup/signup.component.scss
@@ -160,10 +160,7 @@ border: 1px solid #A426D1;
     align-items: center;
     gap: 8px;
     width: 430px;
-    margin-top: 94px;
-    border-radius: 8px;
-    border: 3px solid #A426D1;
-    background: rgba(255, 255, 255, 0.10);
+    
 }
 
 .google1 { 
@@ -255,8 +252,8 @@ border: 1px solid #A426D1;
     border-radius: 8px;
     border: 3px solid #A426D1;
     background: #A426D1;
-    -webkit-box-shadow: 2px 4px 0px 1px rgba(0,0,0,.16), 0 9px 10px 0 rgba(0,0,0,.12);
-    box-shadow: 2px 4px 0px 1px rgba(0,0,0,.16), 0 9px 10px 0 rgba(0,0,0,.12);
+    -webkit-box-shadow: 2px 4px 12px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 2px 4px 12px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 
