--- a/src/app/modules/freelancer/freelancer.component.scss
+++ b/src/app/modules/freelancer/freelancer.component.scss
@@ -206,8 +206,8 @@
     height: 457px;
     border-radius: 16px;
     border: 2px solid #C1C1C1;
-
     width: 264px;
+    box-shadow: 10px 10px 21px -19px   #A426D1;
 }
 
 
@@ -217,7 +217,6 @@
     background-color: #FBEFFF;
     border-bottom-left-radius: 17px;
     border-bottom-right-radius: 17px;
-
 }
 
 .kkcrdinside {
@@ -231,7 +230,7 @@
     width: 35%;
     height: 95px;
     align-self: center;
-    box-shadow: 4px 7px 19px 0px rgb(146 146 147);
+    box-shadow: 3px 7px 15px -2px #A426D1;
 }
 
 .kkcrtalign {
@@ -300,6 +299,8 @@
     margin-top: 18px;
     border-radius: 8px;
     background: #FFF;
+    box-shadow: 1px 1px 0px 0px #A426D1;
+    
 }
 
 .kkindbx1 {
@@ -380,7 +381,7 @@
     margin-top: 10px;
     width: 38%;
     height: 95px;
-    box-shadow: 4px 7px 19px 0px rgb(146 146 147);
+    box-shadow: 3px 7px 15px -2px #A426D1;
 }
 
 .kksettx2 {
